--- a/index.html
+++ b/index.html
@@ -21,24 +21,29 @@
     </header>
 
     <nav>
-        <button onclick="showTab('html')">HTML</button>
-        <button onclick="showTab('css')">CSS</button>
-        <button onclick="showTab('javascript')">JavaScript</button>
+        <button onclick="showTab('input')">Montando o .in</button>
+        <button onclick="showTab('fe_tutorial')">Fe hands-on</button>
+        <button onclick="showTab('prjband')">Bandas projetadas</button>
+        <button onclick="showTab('projfermi')">Fermi surf. projetada</button>
     </nav>
 
-    <section id="html">
-        <h2>Tutorial de HTML</h2>
-        <p>Aqui vai o conteúdo do tutorial de HTML.</p>
+    <section id="input">
+        <h2>Tutorial para você montar o composto</h2>
+        <p></p>
     </section>
 
-    <section id="css" class="hidden">
-        <h2>Tutorial de CSS</h2>
-        <p>Aqui vai o conteúdo do tutorial de CSS.</p>
+    <section id="fe_tutorial" class="hidden">
+        <h2>Tutorial completo para o ferro</h2>
+        <p></p>
     </section>
 
-    <section id="javascript" class="hidden">
-        <h2>Tutorial de JavaScript</h2>
-        <p>Aqui vai o conteúdo do tutorial de JavaScript.</p>
+    <section id="prjband" class="hidden">
+        <h2>Tutorial de como calcular bandas projetadas</h2>
+        <p></p>
+    </section>
+    <section id="projfermi" class="hidden">
+        <h2>Tutorial de como calcular a superfície de fermi projetada</h2>
+        <p></p>
     </section>
 
     <script>
