--- a/index.html
+++ b/index.html
@@ -3,18 +3,64 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Site de Tutoriais</title>
+    <title>ComputEEL/MatSci: tutoriais para o Quantum Espresso!</title>
+    <link href="https://fonts.googleapis.com/css2?family=Ubuntu+Mono&display=swap" rel="stylesheet">
     <style>
-        * { box-sizing: border-box; margin: 0; padding: 0; }
-        body { font-family: Arial, sans-serif; background-color: #f0f0f5; padding: 20px; }
-        header { background-color: #4CAF50; padding: 10px; text-align: center; color: white; border-radius: 10px; }
-        nav { margin-top: 10px; display: flex; gap: 10px; justify-content: center; }
-        button { padding: 10px 20px; cursor: pointer; border: none; background-color: #4CAF50; color: white; border-radius: 5px; }
-        button:hover { background-color: #45a049; }
-        section { margin-top: 20px; padding: 20px; background-color: white; border-radius: 10px; box-shadow: 0 0 10px rgba(0,0,0,0.1); }
-        .hidden { display: none; }
+        * {
+            box-sizing: border-box;
+            margin: 0;
+            padding: 0;
+        }
+
+        body {
+            font-family: 'Ubuntu Mono', monospace;
+            background-color: #f0f0f5;
+            padding: 20px;
+        }
+
+        header {
+            background-color: #440154; /* roxo escuro viridis */
+            padding: 10px;
+            text-align: center;
+            color: white;
+            border-radius: 10px;
+        }
+
+        nav {
+            margin-top: 10px;
+            display: flex;
+            gap: 10px;
+            justify-content: center;
+        }
+
+        button {
+            padding: 10px 20px;
+            cursor: pointer;
+            border: none;
+            background-color: #31688e; /* azul médio viridis */
+            color: white;
+            border-radius: 5px;
+            font-family: 'Ubuntu Mono', monospace;
+        }
+
+        button:hover {
+            background-color: #35b779; /* verde-claro viridis */
+        }
+
+        section {
+            margin-top: 20px;
+            padding: 20px;
+            background-color: white;
+            border-radius: 10px;
+            box-shadow: 0 0 10px rgba(0,0,0,0.1);
+        }
+
+        .hidden {
+            display: none;
+        }
     </style>
 </head>
+
 <body>
     <header>
         <h1>Site de Tutoriais</h1>
