--- a/index.html
+++ b/index.html
@@ -67,19 +67,28 @@
     </header>
 
     <nav>
-        <button onclick="showTab('input')">Montando o .in</button>
+        <button onclick="showTab('input')">Arquivo .in</button>
         <button onclick="showTab('fe_tutorial')">Fe hands-on</button>
+        <button onclick="showTab('bands')">Estrutura de bandas</button>
+        <button onclick="showTab('ELF')">ELF plot</button>
         <button onclick="showTab('prjband')">Bandas projetadas</button>
         <button onclick="showTab('projfermi')">Fermi surf. projetada</button>
     </nav>
 
     <section id="input">
-        <h2>Tutorial para você montar o composto</h2>
+        <h2>Montando o arquivo de entrada e entendendo o seu composto</h2>
         <p></p>
     </section>
-
     <section id="fe_tutorial" class="hidden">
-        <h2>Tutorial completo para o ferro</h2>
+        <h2>Tutorial completo para o ferro (BCC)</h2>
+        <p></p>
+    </section>
+    <section id="bands" class="hidden">
+        <h2>Calculando as bandas sobre um caminho na Zona de Brillouin</h2>
+        <p></p>
+    </section>
+    <section id="ELF" class="hidden">
+        <h2>Função de localização eletrônica</h2>
         <p></p>
     </section>
 
