--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
 <body>
     <header>
-        <h1>Site de Tutoriais</h1>
+        <h1>ComputEEL/MatSci: Tutoriais de DFT usando Quantum Espresso</h1>
     </header>
 
     <nav>
