--- a/index.html
+++ b/index.html
@@ -65,16 +65,14 @@
     <header>
         <h1>ComputEEL/MatSci: Tutoriais de DFT usando Quantum Espresso</h1>
     </header>
-
     <nav>
-        <button onclick="showTab('input')">Arquivo .in</button>
-        <button onclick="showTab('fe_tutorial')">Fe hands-on</button>
-        <button onclick="showTab('bands')">Estrutura de bandas</button>
-        <button onclick="showTab('ELF')">ELF plot</button>
-        <button onclick="showTab('prjband')">Bandas projetadas</button>
-        <button onclick="showTab('projfermi')">Fermi surf. projetada</button>
+        <a href="input.html"><button>Arquivo .in</button></a>
+        <a href="fe_tutorial.html"><button>Fe hands-on</button></a>
+        <a href="bands.html"><button>Estrutura de bandas</button></a>
+        <a href="elf.html"><button>ELF plot</button></a>
+        <a href="prjband.html"><button>Bandas projetadas</button></a>
+        <a href="projfermi.html"><button>Fermi surf. projetada</button></a>
     </nav>
-
     <section id="input">
         <h2>Montando o arquivo de entrada e entendendo o seu composto</h2>
         <p></p>
