--- a/index.html
+++ b/index.html
@@ -62,17 +62,15 @@
 </head>
 
 <body>
-    <header>
-        <h1>ComputEEL/MatSci: Tutoriais de DFT usando Quantum Espresso</h1>
-    </header>
-    <nav>
-        <a href="input.html"><button>Arquivo .in</button></a>
-        <a href="fe_tutorial.html"><button>Fe hands-on</button></a>
-        <a href="bands.html"><button>Estrutura de bandas</button></a>
-        <a href="elf.html"><button>ELF plot</button></a>
-        <a href="prjband.html"><button>Bandas projetadas</button></a>
-        <a href="projfermi.html"><button>Fermi surf. projetada</button></a>
-    </nav>
+    <div id="header"></div>
+
+    <script>
+        fetch("header.html")
+            .then(res => res.text())
+            .then(data => {
+                document.getElementById("header").innerHTML = data;
+            });
+    </script>
     <section id="input">
         <h2>Montando o arquivo de entrada e entendendo o seu composto</h2>
         <p></p>
