--- a/index.html
+++ b/index.html
@@ -21,6 +21,14 @@
         <h2>Esse site foi desenvolvido com o intuito de ajudar os alunos de iniciação científica com os cálculos DFT pelo Quantum Espresso</h2>
         <p>Escolha um tutorial no menu acima para começar!</p>
     </section>
+    <div class="banner">
+      <div class="slides">
+        <img src="img1.jpg" alt="Imagem 1">
+        <img src="img2.jpg" alt="Imagem 2">
+        <img src="img3.jpg" alt="Imagem 3">
+      </div>
+    </div>
+
 </body>
 </html>
 
